<?xml version="1.0" encoding="utf-8"?>
<!-- activity_parameters.xml -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.utilisateur.orthomem.controllers.fragments.ParametersFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_myaccount"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/myaccount_label"/>
            <Button
                android:id="@+id/button_updpassword"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/updpassword_label"/>
            <Button
                android:id="@+id/button_preferences"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preferences_label"/>
            <Button
                android:id="@+id/button_logout"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout_label"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>