<?xml version="1.0" encoding="utf-8"?>
<!-- activity_main.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context="com.utilisateur.orthomem.controllers.activities.MainActivity">

    <android.support.v7.widget.CardView
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/home_title"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_title"/>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:gravity="top"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/logo_orthomem_600x600_grey" />

        <TextView
            android:id="@+id/home_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/home_desc"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:gravity="bottom"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/login_progressbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:visibility="gone" />

        <TextView
            android:id="@+id/home_submit_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/home_submit" />

        <Button
            android:id="@+id/home_ortho_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@drawable/orthobutton"
            android:text="@string/home_ortho"
            android:textStyle="bold" />

        <Button
            android:id="@+id/home_patient_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@drawable/orthobutton"
            android:text="@string/home_patient"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/home_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="-" />

    </LinearLayout>


</LinearLayout>