<?xml version="1.0" encoding="utf-8"?>
<!-- activity_mywords.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.utilisateur.orthomem.controllers.fragments.MyWordsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/mywords_title"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mywords_title"/>

    </android.support.v7.widget.CardView>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mywords_status"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mywords_status" />

            <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/myWordsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/mywords_submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_gravity="bottom"
                android:background="@drawable/orthobutton"
                android:text="@string/mywords_submit"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>

